@@ -1,26 +1,47 @@
-val sparkVersion = "2.3.1"
+val sparkVersion = "4.1.3"
+
+// Spark on JDK 17+ needs these module opens; mirrors Spark's own
+// JavaModuleOptions so forked test JVMs behave like spark-submit.
+val sparkJavaOptions = Seq(
+  "-XX:+IgnoreUnrecognizedVMOptions",
+  "--add-modules=jdk.incubator.vector",
+  "--add-opens=java.base/java.lang=ALL-UNNAMED",
+  "--add-opens=java.base/java.lang.invoke=ALL-UNNAMED",
+  "--add-opens=java.base/java.lang.reflect=ALL-UNNAMED",
+  "--add-opens=java.base/java.io=ALL-UNNAMED",
+  "--add-opens=java.base/java.net=ALL-UNNAMED",
+  "--add-opens=java.base/java.nio=ALL-UNNAMED",
+  "--add-opens=java.base/java.util=ALL-UNNAMED",
+  "--add-opens=java.base/java.util.concurrent=ALL-UNNAMED",
+  "--add-opens=java.base/java.util.concurrent.atomic=ALL-UNNAMED",
+  "--add-opens=java.base/jdk.internal.ref=ALL-UNNAMED",
+  "--add-opens=java.base/sun.nio.ch=ALL-UNNAMED",
+  "--add-opens=java.base/sun.nio.cs=ALL-UNNAMED",
+  "--add-opens=java.base/sun.security.action=ALL-UNNAMED",
+  "--add-opens=java.base/sun.util.calendar=ALL-UNNAMED",
+  "-Djdk.reflect.useDirectMethodHandle=false",
+  "-Dio.netty.tryReflectionSetAccessible=true"
+)
 
 lazy val commonSettings = Seq(
   organization := "com.chrisluttazi.spark.etl",
   version := "0.1.0-SNAPSHOT",
-  scalaVersion := "2.11.12",
-  resolvers ++= Seq(
-    "Artima Maven Repository" at "https://repo.artima.com/releases"
-  ),
+  scalaVersion := "2.13.18",
   libraryDependencies ++= Seq(
     "org.apache.spark" %% "spark-core" % sparkVersion,
     "org.apache.spark" %% "spark-sql" % sparkVersion,
     "org.apache.spark" %% "spark-hive" % sparkVersion,
-    "org.scalactic" %% "scalactic" % "3.0.1",
-    "org.scalatest" %% "scalatest" % "3.0.1" % "test"
-  )
+    "org.scalactic" %% "scalactic" % "3.2.20",
+    "org.scalatest" %% "scalatest" % "3.2.20" % Test
+  ),
+  Test / fork := true,
+  Test / javaOptions ++= sparkJavaOptions
 )
 
 lazy val commons = project
   .settings(
     commonSettings
-    // other settings
   )
 
-lazy val root = (project in file(".")).
-  aggregate(commons)
+lazy val root = (project in file("."))
+  .aggregate(commons)
